deploy/k8s/spark/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sparkmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sparkmaster
  template:
    metadata:
      labels:
        component: sparkmaster
    spec:
      containers:
        - name: sparkmaster
          image: spark-hadoop:3.0.0
          command: ["./spark-master.sh"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
            - containerPort: 4040
          resources:
            requests:
              cpu: 100m
