deploy/k8s/spark/spark-worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spar-kworker
          image: spark-hadoop-deiteo:3.0.1
          command: ["./spark-worker.sh"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
