deploy/k8s/spark/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sparkmaster
spec:
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: detailedwebui4040
      port: 4040
      targetPort: 4040
    - name: spark
      port: 7077
      targetPort: 7077
  selector:
    component: sparkmaster
