deploy/k8s/spark/minikube-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: sparkkubernetes
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sparkmaster
              port:
                number: 8080
        - pathType: Prefix
          path: /jobs
          backend:
            service:
              name: sparkmaster
              port:
                number: 4040
